@@ -187,7 +187,24 @@ PHP_METHOD(styleObj, __set)
     else IF_SET_DOUBLE("minvalue", php_style->style->minvalue, value)
     else IF_SET_DOUBLE("maxvalue", php_style->style->maxvalue, value)
     else IF_SET_STRING("rangeitem", php_style->style->rangeitem, value)
-    else IF_SET_LONG("opacity", php_style->style->opacity, value)
+    else if (STRING_EQUAL("opacity", property))
+    {
+        int alpha;
+        convert_to_long(value);
+        php_style->style->opacity = Z_LVAL_P(value);
+
+        /* apply opacity as the alpha channel color(s) */
+        if(php_style->style->opacity < 100)
+          alpha = MS_NINT(php_style->style->opacity*2.55);
+        else
+            alpha = 255;
+
+        php_style->style->color.alpha = alpha; 
+        php_style->style->outlinecolor.alpha = alpha;
+        php_style->style->backgroundcolor.alpha = alpha;
+        php_style->style->mincolor.alpha = alpha;
+        php_style->style->maxcolor.alpha = alpha;
+    }
     else if (STRING_EQUAL("symbolname", property))
     {
         convert_to_string(value);
