@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk, 6.1-dev, future 6.2): 
 ------------------------------------------------- 
 
+- Fixed PHP MapScript opacity property of StyleObj no longer works (#3920)
+
 - Fixed Using STYLEITEM AUTO, loadExpression fails when the label text
   contains a space or begins with a double quote (#3481)
 
